syntax = "proto3";

package nodus.v2.nodes;
option go_package = "github.com/spounge-ai/spounge-protos/gen/go/nodus/v2;nodes";

import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";
import "nodus/v2/common/types.proto";

message DirectNodeConfig {
  string mcp_server_id = 1;
  string tool_name = 3;
  google.protobuf.Struct tool_parameters = 4;
  google.protobuf.Duration tool_timeout = 5;
  bool validate_parameters = 6;
  nodus.v2.common.ResultFormat output_format = 7;
  repeated string extract_fields = 8;
  DirectNodeOptions options = 9;
}

message DirectNodeOptions {
  bool cache_result = 1;
  google.protobuf.Duration cache_ttl = 2;
  bool require_confirmation = 3;
  map<string, string> parameter_overrides = 4;
  RetryPolicy retry_policy = 5;
}

message RetryPolicy {
  int32 max_attempts = 1;
  google.protobuf.Duration initial_backoff = 2;
  google.protobuf.Duration max_backoff = 3;
  float backoff_multiplier = 4;
  repeated string retryable_error_codes = 5;
}